--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "express-hello-world",
+  "name": "MMM-Tesla3-service",
   "version": "1.0.0",
-  "description": "Express Hello World on Render",
+  "description": "MMM-Tesla3-service on Render",
   "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
-  "author": "Render Developers",
+  "repository": "https://github.com/usncahill/MMM-Tesla3-service",
+  "author": "usncahill",
   "license": "MIT",
   "private": false,
   "scripts": {
